Switching profile and save new value to profiles

--- a/public/stylesheets/accueil.css
+++ b/public/stylesheets/accueil.css
@@ -188,6 +188,15 @@ section{
     text-align: center;
 }
 
+.param_value output{
+    border: none;
+    height: inherit;
+    width: inherit;
+    background-color: inherit;
+    font-size: 0.85em;
+    text-align: center;
+}
+
 .param_value input:focus{
     outline: none;
 }
