--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -401,7 +401,7 @@
                     $('#icone_representation4').css('margin-left', (timeRatio - 11) + '%')
                     $('#icone_representation4').show()
 
-                    $('#pic4').on('click', _displayTempValues)
+                    $('#pic4').on('click', _displayTempValue)
                 }
 
                 function menuSwitch(selectedElem) {
