--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -478,7 +478,7 @@
                                 return x.timestamp
                             })
                             var temp = data.map(function(x){
-                                return x.temp
+                                return x.temperature
                             })
 
                             _createCharts('Courbe de la température', 'Durée (en h)', 'Température (en °C)', '#FF0000', 'temperature_curve', temp, timestamp, 0, 50)
