Improve import table when there is a lot of profiles

--- a/public/stylesheets/accueil.css
+++ b/public/stylesheets/accueil.css
@@ -366,12 +366,23 @@ section{
 
 
 /*  Import Dialog Style  */
+#import-dialog {
+    width: 1250px;
+}
+
 #import-table th, #import-table td {
     padding: 15px;
 }
 
-#import-table thead tr {
+#import-table thead th {
     border-bottom: 2px black solid;
+    border-top: 2px black solid;
+}
+
+#import-table thead, #import-table tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
 }
 
 #import-table tr:nth-child(even) {
@@ -381,6 +392,12 @@ section{
 #import-table {
     border-collapse: collapse;
     text-align: center;
+}
+
+#import-table tbody{
+    display: block;
+    max-height: 600px;
+    overflow-y: scroll; 
 }
 
 /*  Create Dialog Style  */
@@ -395,6 +412,7 @@ section{
     height: 30px;
 }
 
-#create-dialog .button {
+.button {
+    height: 30px;
     width: 100px;
 }
