--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -201,24 +201,22 @@
                     <h3>Profils publiques :</h3>
                     <table id="import-table">
                         <thead>
-                            <tr>
-                                <th>Importer</th>
-                                <th>Nom</th>
-                                <th>Température min</th>
-                                <th>Température max</th>
-                                <th>Ph min</th>
-                                <th>Ph max</th>
-                                <th>Fertilisant</th>
-                                <th>Heure éclairage ON</th>
-                                <th>Heure éclairage OFF</th>
-                                <th>Interval de photo</th>
-                            </tr>
+                            <th>Importer</th>
+                            <th>Nom</th>
+                            <th>Température min</th>
+                            <th>Température max</th>
+                            <th>Ph min</th>
+                            <th>Ph max</th>
+                            <th>Fertilisant</th>
+                            <th>Heure éclairage ON</th>
+                            <th>Heure éclairage OFF</th>
+                            <th>Interval de photo</th>
                         </thead>
                         <tbody></tbody>
                     </table>
                     <br>
-                    <button id="import-profile-button" onclick="importProfile()">Importer</button>
-                    <button id="cancel-profile-button" onclick="closeDialog()">Annuler</button>
+                    <button class="button" id="import-profile-button" onclick="importProfile()">Importer</button>
+                    <button class="button" id="cancel-profile-button" onclick="closeDialog()">Annuler</button>
                 </dialog>
                 <dialog id="create-dialog" style="display: none">
                     <h3>Nouveau profil</h3>
